--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -8,7 +8,7 @@
   <hr>
 
   <div>
-    For hot module reloading run braching
+    For hot module reloading run
     <pre>npm run start:hmr</pre>
   </div>
 
